Certificates page. Clients page.

--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,8 @@
 						<li><a href="page-gallery-single.html">Галерея работ: страница записи</a></li>
 						<li><a href="page-promo.html">Акции</a></li>
 						<li><a href="page-promo-single.html">Акции: страница записи</a></li>
+						<li><a href="page-certificates.html">Наши сертификаты</a></li>
+						<li><a href="page-clients.html">Наши клиенты</a></li>
 					</ol>
 				</div>
 				<div class="col-sm-6">
