--- a/app/page-brands.html
+++ b/app/page-brands.html
@@ -254,7 +254,7 @@
 					<div class="mt-32"></div>
 
 					<!-- Pagination -->
-					@@include('./parts/pagination.html')
+					@@include('parts/pagination.html')
 				</div><!-- /.shop-brands-list -->
 
 			</div>
