--- a/app/page-instructions.html
+++ b/app/page-instructions.html
@@ -247,7 +247,7 @@
 					</div><!-- /.row -->
 					
 					<!-- Pagination -->
-					@@include('./parts/pagination.html')
+					@@include('parts/pagination.html')
 				</div>
 
 			</div>
