--- a/app/page-promo-single.html
+++ b/app/page-promo-single.html
@@ -74,40 +74,40 @@
 				</div>
 				<div class="row mt-32 row-items-40 row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 row-cols-xxl-6">
 					<div class="col">
-						@@include('./parts/products-card/product-1.html')
+						@@include('parts/products-card/product-1.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-2.html')
+						@@include('parts/products-card/product-2.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-3.html')
+						@@include('parts/products-card/product-3.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-4.html')
+						@@include('parts/products-card/product-4.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-5.html')
+						@@include('parts/products-card/product-5.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-6.html')
+						@@include('parts/products-card/product-6.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-1.html')
+						@@include('parts/products-card/product-1.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-2.html')
+						@@include('parts/products-card/product-2.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-3.html')
+						@@include('parts/products-card/product-3.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-4.html')
+						@@include('parts/products-card/product-4.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-5.html')
+						@@include('parts/products-card/product-5.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-6.html')
+						@@include('parts/products-card/product-6.html')
 					</div><!-- /.col -->
 				</div><!-- /.row -->
 			</section>
