--- a/app/page-shop-cart.html
+++ b/app/page-shop-cart.html
@@ -487,6 +487,6 @@
 
 </main>
 
-@@include('./parts/modals/privacy-policy.html')
+@@include('parts/modals/privacy-policy.html')
 
 @@include('parts/footer.html')
