--- a/app/page-shop-compare.html
+++ b/app/page-shop-compare.html
@@ -55,22 +55,22 @@
 							<div class="swiper-container">
 								<div class="swiper-wrapper">
 									<div class="swiper-slide">
-										@@include('./parts/products-card/product-1.html')
+										@@include('parts/products-card/product-1.html')
 									</div><!-- /.slide -->
 									<div class="swiper-slide">
-										@@include('./parts/products-card/product-2.html')
+										@@include('parts/products-card/product-2.html')
 									</div><!-- /.slide -->
 									<div class="swiper-slide">
-										@@include('./parts/products-card/product-3.html')
+										@@include('parts/products-card/product-3.html')
 									</div><!-- /.slide -->
 									<div class="swiper-slide">
-										@@include('./parts/products-card/product-4.html')
+										@@include('parts/products-card/product-4.html')
 									</div><!-- /.slide -->
 									<div class="swiper-slide">
-										@@include('./parts/products-card/product-5.html')
+										@@include('parts/products-card/product-5.html')
 									</div><!-- /.slide -->
 									<div class="swiper-slide">
-										@@include('./parts/products-card/product-6.html')
+										@@include('parts/products-card/product-6.html')
 									</div><!-- /.slide -->
 								</div><!-- /.swiper-wrapper -->
 							</div><!-- /.swiper-container -->
