--- a/app/page-shop-product.html
+++ b/app/page-shop-product.html
@@ -618,7 +618,7 @@
 													</div><!-- /.card-testimonial -->
 
 													<!-- Pagination -->
-													@@include('./parts/pagination.html')
+													@@include('parts/pagination.html')
 												</div><!-- /.col -->
 												<div class="col-xl-5">
 													<div class="testimonials-form rounded-8">
@@ -887,31 +887,31 @@
 					<div class="swiper-container">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-1.html')
+								@@include('parts/products-card/product-1.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-2.html')
+								@@include('parts/products-card/product-2.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-3.html')
+								@@include('parts/products-card/product-3.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-4.html')
+								@@include('parts/products-card/product-4.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-5.html')
+								@@include('parts/products-card/product-5.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-6.html')
+								@@include('parts/products-card/product-6.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-1.html')
+								@@include('parts/products-card/product-1.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-2.html')
+								@@include('parts/products-card/product-2.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-3.html')
+								@@include('parts/products-card/product-3.html')
 							</div><!-- /.slide -->
 						</div><!-- /.swiper-wrapper -->
 					</div><!-- /.swiper-container -->
@@ -940,31 +940,31 @@
 					<div class="swiper-container">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-1.html')
+								@@include('parts/products-card/product-1.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-2.html')
+								@@include('parts/products-card/product-2.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-3.html')
+								@@include('parts/products-card/product-3.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-4.html')
+								@@include('parts/products-card/product-4.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-5.html')
+								@@include('parts/products-card/product-5.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-6.html')
+								@@include('parts/products-card/product-6.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-1.html')
+								@@include('parts/products-card/product-1.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-2.html')
+								@@include('parts/products-card/product-2.html')
 							</div><!-- /.slide -->
 							<div class="swiper-slide">
-								@@include('./parts/products-card/product-3.html')
+								@@include('parts/products-card/product-3.html')
 							</div><!-- /.slide -->
 						</div><!-- /.swiper-wrapper -->
 					</div><!-- /.swiper-container -->
@@ -988,6 +988,6 @@
 
 </main>
 
-@@include('./parts/modals/discount-product.html')
+@@include('parts/modals/discount-product.html')
 
 @@include('parts/footer.html')
