--- a/app/page-shop-products-horizontal.html
+++ b/app/page-shop-products-horizontal.html
@@ -26,7 +26,7 @@
 				<!-- Sidebar -->
 				<aside class="page-aside widgets" id="shop-filters-sidebar">
 
-					@@include('./parts/shop/shop-sidebar.html')
+					@@include('parts/shop/shop-sidebar.html')
 
 				</aside>
 				<!-- End sidebar -->
@@ -121,28 +121,28 @@
 					</div>
 
 					<!-- Shop settings -->
-					@@include('./parts/shop/shop-settings.html')
+					@@include('parts/shop/shop-settings.html')
 
 					<!-- List of products -->
 					<div class="shop-products shop-products-horizontal">
 						<div class="row row-items-40 row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-xxl-5">
 							<div class="col">
-								@@include('./parts/products-card/product-1.html')
+								@@include('parts/products-card/product-1.html')
 							</div><!-- /.col -->
 							<div class="col">
-								@@include('./parts/products-card/product-2.html')
+								@@include('parts/products-card/product-2.html')
 							</div><!-- /.col -->
 							<div class="col">
-								@@include('./parts/products-card/product-3.html')
+								@@include('parts/products-card/product-3.html')
 							</div><!-- /.col -->
 							<div class="col">
-								@@include('./parts/products-card/product-4.html')
+								@@include('parts/products-card/product-4.html')
 							</div><!-- /.col -->
 							<div class="col">
-								@@include('./parts/products-card/product-5.html')
+								@@include('parts/products-card/product-5.html')
 							</div><!-- /.col -->
 							<div class="col">
-								@@include('./parts/products-card/product-6.html')
+								@@include('parts/products-card/product-6.html')
 							</div><!-- /.col -->
 						</div><!-- /.row -->
 
@@ -152,7 +152,7 @@
 						</div>
 
 						<!-- Pagination -->
-						@@include('./parts/pagination.html')
+						@@include('parts/pagination.html')
 					</div>
 
 					<!-- Section: Помочь с выбором? -->
@@ -239,7 +239,7 @@
 						</div><!-- /.row -->
 					</section>
 
-					@@include('./parts/seo-articles/article-2.html')
+					@@include('parts/seo-articles/article-2.html')
 
 				</div><!-- /.page-content -->
 				<!-- End Page content -->
