--- a/app/page-testimonials.html
+++ b/app/page-testimonials.html
@@ -98,7 +98,7 @@
 						</div><!-- /.card-testimonial -->
 
 						<!-- Pagination -->
-						@@include('./parts/pagination.html')
+						@@include('parts/pagination.html')
 					</div><!-- /.col -->
 					<div class="col-xl-5">
 						<div class="testimonials-form rounded-8">
