--- a/app/page-shop-catalog.html
+++ b/app/page-shop-catalog.html
@@ -252,45 +252,45 @@
 			<div class="container">
 
 				<!-- Shop settings -->
-				@@include('./parts/shop/shop-settings.html')
+				@@include('parts/shop/shop-settings.html')
 
 				<!-- List of products -->
 				<div class="row row-items-40 row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-xl-6">
 					<div class="col">
-						@@include('./parts/products-card/product-1.html')
+						@@include('parts/products-card/product-1.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-2.html')
+						@@include('parts/products-card/product-2.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-3.html')
+						@@include('parts/products-card/product-3.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-4.html')
+						@@include('parts/products-card/product-4.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-5.html')
+						@@include('parts/products-card/product-5.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-6.html')
+						@@include('parts/products-card/product-6.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-1.html')
+						@@include('parts/products-card/product-1.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-2.html')
+						@@include('parts/products-card/product-2.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-3.html')
+						@@include('parts/products-card/product-3.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-4.html')
+						@@include('parts/products-card/product-4.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-5.html')
+						@@include('parts/products-card/product-5.html')
 					</div><!-- /.col -->
 					<div class="col">
-						@@include('./parts/products-card/product-6.html')
+						@@include('parts/products-card/product-6.html')
 					</div><!-- /.col -->
 				</div><!-- /.row -->
 
