News -single/page. Articles -single/page. Code refactoring.

--- a/app/page-promo-single.html
+++ b/app/page-promo-single.html
@@ -16,7 +16,7 @@
 	<!-- Page content -->
 	<div class="page-content">
 		<div class="container">
-			<div class="article-heading mb-32">
+			<div class="page-heading mb-32">
 				<h1 class="title">Акция на уцененные товары</h1>
 				<div class="date text-gray-400">16 января 2020</div>
 			</div>
