--- a/app/page-promo.html
+++ b/app/page-promo.html
@@ -22,8 +22,8 @@
 			<!-- Promo -->
 			<div class="promo">
 
-				<!-- Gallery categories -->
-				<div class="gallery-single-categories">
+				<!-- Promo categories -->
+				<div class="promo-categories">
 					<ul class="categories-list">
 						<li><a href="#" class="_current">Все</a></li>
 						<li><a href="#">Действующие</a></li>
@@ -33,8 +33,9 @@
 
 				<div class="mb-32"></div>
 
-				<!-- Gallery list -->
-				<div class="gallery-single-list">
+				<!-- Promo list -->
+				<div class="promo-list">
+
 					<div class="row row-items-24 row-cols-1 row-cols-md-2 row-cols-lg-3">
 						<div class="col">
 							<a href="page-promo-single.html" class="card card-animated card-promo">
@@ -148,6 +149,7 @@
 
 					<!-- Pagination -->
 					@@include('parts/pagination.html')
+
 				</div>
 
 			</div>
