--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -241,7 +241,7 @@
 								<div class="wrapper">
 									<ul class="products-list">
 										<li class="products-list-item">
-											<a href="#" class="products-list-link">
+											<a href="page-shop-product.html" class="products-list-link">
 												<div class="photo img-cover">
 													<img src="./images/menu-categories/1.jpg" alt="">
 												</div>
@@ -257,7 +257,7 @@
 											</a>
 										</li>
 										<li class="products-list-item">
-											<a href="#" class="products-list-link">
+											<a href="page-shop-product.html" class="products-list-link">
 												<div class="photo img-cover">
 													<img src="./images/menu-categories/1.jpg" alt="">
 												</div>
@@ -273,7 +273,7 @@
 											</a>
 										</li>
 									</ul>
-									<a href="page-cart.html" class="checkout-btn btn btn-green">Оформить заказ</a>
+									<a href="page-shop-cart.html" class="checkout-btn btn btn-green">Оформить заказ</a>
 								</div><!-- /.wrapper -->
 							</div><!-- /.widget -->
 						</div><!-- /.wishlist -->
@@ -292,7 +292,7 @@
 								<div class="wrapper">
 									<ul class="products-list">
 										<li class="products-list-item">
-											<a href="#" class="products-list-link">
+											<a href="page-shop-product.html" class="products-list-link">
 												<div class="photo img-cover">
 													<img src="./images/menu-categories/1.jpg" alt="">
 												</div>
@@ -315,7 +315,7 @@
 										</li>
 									</ul>
 									<div class="subtotal text-md w-bold">Итого: 15 800 руб.</div>
-									<a href="page-cart.html" class="checkout-btn btn btn-green">Оформить заказ</a>
+									<a href="page-shop-cart.html" class="checkout-btn btn btn-green">Оформить заказ</a>
 								</div><!-- /.wrapper -->
 							</div><!-- /.widget -->
 						</div><!--/.shopping-cart-->
