--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,11 @@
 						<li><a href="page-promo-single.html">Акции: страница записи</a></li>
 						<li><a href="page-certificates.html">Наши сертификаты</a></li>
 						<li><a href="page-clients.html">Наши клиенты</a></li>
+						<li><a href="page-news.html">Новости</a></li>
+						<li><a href="page-news-single.html">Новости: страница записи</a></li>
+						<li><a href="page-articles.html">Статьи</a></li>
+						<li><a href="page-articles-single.html">Статьи: страница записи</a></li>
+						<li><a href="page-contacts.html">Контакты</a></li>
 					</ol>
 				</div>
 				<div class="col-sm-6">
