--- a/app/parts/home/articles.html
+++ b/app/parts/home/articles.html
@@ -9,7 +9,7 @@
 			<div class="tab-pane fade show active" id="nav-articles-1" role="tabpanel" aria-labelledby="nav-articles-tab-1">
 				<div class="h-articles-wrapper row row-items-32">
 					<div class="col-lg-3">
-						<a href="#" class="card card-article">
+						<a href="page-news-single.html" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="./images/articles/1.jpg" alt="">
 							</div>
@@ -20,7 +20,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col-lg-3">
-						<a href="#" class="card card-article">
+						<a href="page-news-single.html" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="./images/articles/2.jpg" alt="">
 							</div>
@@ -31,7 +31,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col-lg-3">
-						<a href="#" class="card card-article">
+						<a href="page-news-single.html" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="./images/articles/3.jpg" alt="">
 							</div>
@@ -42,7 +42,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col-lg-3">
-						<a href="#" class="card card-article">
+						<a href="page-news-single.html" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="./images/articles/4.jpg" alt="">
 							</div>
@@ -54,13 +54,13 @@
 					</div><!-- /.col -->
 				</div><!-- /.row -->
 				<div class="text-right">
-					<a href="#" class="link-arrow">Все новости <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
+					<a href="page-news.html" class="link-arrow">Все новости <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
 				</div>
 			</div><!-- /.tab -->
 			<div class="tab-pane fade" id="nav-articles-2" role="tabpanel" aria-labelledby="nav-articles-tab-2">
 				<div class="h-articles-wrapper row row-items-32">
 					<div class="col-lg-3">
-						<a href="#" class="card card-article">
+						<a href="page-articles-single.html" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="./images/articles/2.jpg" alt="">
 							</div>
@@ -71,7 +71,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col-lg-3">
-						<a href="#" class="card card-article">
+						<a href="page-articles-single.html" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="./images/articles/4.jpg" alt="">
 							</div>
@@ -82,7 +82,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col-lg-3">
-						<a href="#" class="card card-article">
+						<a href="page-articles-single.html" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="./images/articles/1.jpg" alt="">
 							</div>
@@ -93,7 +93,7 @@
 						</a>
 					</div><!-- /.col -->
 					<div class="col-lg-3">
-						<a href="#" class="card card-article">
+						<a href="page-articles-single.html" class="card card-article">
 							<div class="card-photo img-cover">
 								<img src="./images/articles/3.jpg" alt="">
 							</div>
@@ -105,7 +105,7 @@
 					</div><!-- /.col -->
 				</div><!-- /.row -->
 				<div class="text-right">
-					<a href="#" class="link-arrow">Все статьи <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
+					<a href="page-articles.html" class="link-arrow">Все статьи <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
 				</div>
 			</div><!-- /.tab -->
 		</div><!-- /.tab-content -->
