--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,10 @@
 						<li><a href="page-shop-cart.html">Корзина</a></li>
 						<li><a href="page-shop-order.html">Спасибо за заказ</a></li>
 					</ol>
+					<h3 class="mt-48 mb-20 text-md">Другое</h3>
+					<ol class="pages-list">
+						<li><a href="modals.html">Модальные окна</a></li>
+					</ol>
 				</div>
 			</div>
 
