--- a/app/parts/modals/promo.html
+++ b/app/parts/modals/promo.html
@@ -36,7 +36,7 @@
 							</div>
 						</div><!-- /.col -->
 					</div><!-- /.row -->
-					<div class="form-group form-group-label">
+					<div class="form-group">
 						<textarea class="form-textarea" rows="4" placeholder="Комментарий" required></textarea>
 					</div>
 					<button type="submit" class="btn btn-lg btn-green btn-submit">Отправить</button>
