--- a/app/page-shop-product.html
+++ b/app/page-shop-product.html
@@ -522,7 +522,7 @@
 									<div class="tab-pane-body">
 										<h2 class="mb-48">Комплектация</h2>
 										<div class="product-complectation">
-											<a href="#" class="product-complectation-item">
+											<a href="images/products/1.png" data-fancybox class="product-complectation-item">
 												<div class="product-complectation-photo img-scale">
 													<img src="images/products/1.png" alt="">
 												</div>
@@ -531,7 +531,7 @@
 													<span class="count">1 шт.</span>
 												</div>
 											</a><!-- /.product-complectation-item -->
-											<a href="#" class="product-complectation-item">
+											<a href="images/products/2.jpg" data-fancybox class="product-complectation-item">
 												<div class="product-complectation-photo img-scale">
 													<img src="images/products/2.jpg" alt="">
 												</div>
@@ -540,7 +540,7 @@
 													<span class="count">1 шт.</span>
 												</div>
 											</a><!-- /.product-complectation-item -->
-											<a href="#" class="product-complectation-item">
+											<a href="images/products/3.jpg" data-fancybox class="product-complectation-item">
 												<div class="product-complectation-photo img-scale">
 													<img src="images/products/3.jpg" alt="">
 												</div>
@@ -549,7 +549,7 @@
 													<span class="count">2 шт.</span>
 												</div>
 											</a><!-- /.product-complectation-item -->
-											<a href="#" class="product-complectation-item">
+											<a href="images/products/4.jpg" data-fancybox class="product-complectation-item">
 												<div class="product-complectation-photo img-scale">
 													<img src="images/products/4.jpg" alt="">
 												</div>
