Product complectation css fixes.

--- a/app/page-shop-product.html
+++ b/app/page-shop-product.html
@@ -522,42 +522,42 @@
 									<div class="tab-pane-body">
 										<h2 class="mb-48">Комплектация</h2>
 										<div class="product-complectation">
-											<a href="images/products/1.png" data-fancybox class="product-complectation-item">
-												<div class="product-complectation-photo img-scale">
+											<div class="product-complectation-item">
+												<a href="images/products/1.png" data-fancybox class="product-complectation-photo img-scale">
 													<img src="images/products/1.png" alt="">
-												</div>
+												</a>
 												<div class="product-complectation-meta">
-													<span class="title">CAME BX608AGS (801MS-0050)</span>
+													<a href="#" class="title">CAME BX608AGS (801MS-0050)</a>
 													<span class="count">1 шт.</span>
 												</div>
-											</a><!-- /.product-complectation-item -->
-											<a href="images/products/2.jpg" data-fancybox class="product-complectation-item">
-												<div class="product-complectation-photo img-scale">
+											</div><!-- /.product-complectation-item -->
+											<div href="images/products/2.jpg" class="product-complectation-item">
+												<a href="images/products/2.jpg" data-fancybox class="product-complectation-photo img-scale">
 													<img src="images/products/2.jpg" alt="">
-												</div>
+												</a>
 												<div class="product-complectation-meta">
-													<span class="title">CAME AF43S</span>
+													<a href="#" class="title">CAME AF43S</a>
 													<span class="count">1 шт.</span>
 												</div>
-											</a><!-- /.product-complectation-item -->
-											<a href="images/products/3.jpg" data-fancybox class="product-complectation-item">
-												<div class="product-complectation-photo img-scale">
+											</div><!-- /.product-complectation-item -->
+											<div class="product-complectation-item">
+												<a href="images/products/3.jpg" data-fancybox class="product-complectation-photo img-scale">
 													<img src="images/products/3.jpg" alt="">
-												</div>
+												</a>
 												<div class="product-complectation-meta">
-													<span class="title">CAME TOP44RGR (806TS-0130)</span>
+													<a href="#" class="title">CAME TOP44RGR (806TS-0130)</a>
 													<span class="count">2 шт.</span>
 												</div>
-											</a><!-- /.product-complectation-item -->
-											<a href="images/products/4.jpg" data-fancybox class="product-complectation-item">
-												<div class="product-complectation-photo img-scale">
+											</div><!-- /.product-complectation-item -->
+											<div class="product-complectation-item">
+												<a href="images/products/4.jpg" data-fancybox class="product-complectation-photo img-scale">
 													<img src="images/products/4.jpg" alt="">
-												</div>
+												</a>
 												<div class="product-complectation-meta">
-													<span class="title">CAME DIR10 фотоэлементы накладные дальность 10 м</span>
+													<a href="#" class="title">CAME DIR10 фотоэлементы накладные дальность 10 м</a>
 													<span class="count">2 шт.</span>
 												</div>
-											</a><!-- /.product-complectation-item -->
+											</div><!-- /.product-complectation-item -->
 										</div><!-- /.product-complectation -->
 									</div><!-- /.tab-pane-body -->
 								</div><!-- /.tab-pane-collapse -->
