--- a/app/parts/home/popular-categories.html
+++ b/app/parts/home/popular-categories.html
@@ -12,7 +12,7 @@
 						<h4 class="heading-title">Ворота</h4>
 						<div class="heading-link">
 							<span>Перейти</span>
-							<svg class="icon icon-arrow-right"><use xlink:href="/images/symbol-defs.svg#arrow-right"></use></svg>
+							<svg class="icon icon-arrow-right"><use xlink:href="./images/symbol-defs.svg#arrow-right"></use></svg>
 						</div>
 					</div>
 					<div class="photo img-scale">
@@ -25,7 +25,7 @@
 						<h4 class="heading-title">Шлагбаумы</h4>
 						<div class="heading-link">
 							<span>Перейти</span>
-							<svg class="icon icon-arrow-right"><use xlink:href="/images/symbol-defs.svg#arrow-right"></use></svg>
+							<svg class="icon icon-arrow-right"><use xlink:href="./images/symbol-defs.svg#arrow-right"></use></svg>
 						</div>
 					</div>
 					<div class="photo img-scale">
@@ -40,7 +40,7 @@
 						<h4 class="heading-title">Болларды</h4>
 						<div class="heading-link">
 							<span>Перейти</span>
-							<svg class="icon icon-arrow-right"><use xlink:href="/images/symbol-defs.svg#arrow-right"></use></svg>
+							<svg class="icon icon-arrow-right"><use xlink:href="./images/symbol-defs.svg#arrow-right"></use></svg>
 						</div>
 					</div>
 					<div class="photo img-scale">
@@ -53,7 +53,7 @@
 						<h4 class="heading-title">Автоматика для ворот</h4>
 						<div class="heading-link">
 							<span>Перейти</span>
-							<svg class="icon icon-arrow-right"><use xlink:href="/images/symbol-defs.svg#arrow-right"></use></svg>
+							<svg class="icon icon-arrow-right"><use xlink:href="./images/symbol-defs.svg#arrow-right"></use></svg>
 						</div>
 					</div>
 					<div class="photo img-scale">
@@ -68,7 +68,7 @@
 						<h4 class="heading-title">Пульты, брелоки</h4>
 						<div class="heading-link">
 							<span>Перейти</span>
-							<svg class="icon icon-arrow-right"><use xlink:href="/images/symbol-defs.svg#arrow-right"></use></svg>
+							<svg class="icon icon-arrow-right"><use xlink:href="./images/symbol-defs.svg#arrow-right"></use></svg>
 						</div>
 					</div>
 					<div class="photo img-scale">
@@ -81,7 +81,7 @@
 						<h4 class="heading-title">Аксессуары</h4>
 						<div class="heading-link">
 							<span>Перейти</span>
-							<svg class="icon icon-arrow-right"><use xlink:href="/images/symbol-defs.svg#arrow-right"></use></svg>
+							<svg class="icon icon-arrow-right"><use xlink:href="./images/symbol-defs.svg#arrow-right"></use></svg>
 						</div>
 					</div>
 					<div class="photo img-scale">
@@ -96,7 +96,7 @@
 						<h4 class="heading-title">Комплектущие для ворот</h4>
 						<div class="heading-link">
 							<span>Перейти</span>
-							<svg class="icon icon-arrow-right"><use xlink:href="/images/symbol-defs.svg#arrow-right"></use></svg>
+							<svg class="icon icon-arrow-right"><use xlink:href="./images/symbol-defs.svg#arrow-right"></use></svg>
 						</div>
 					</div>
 					<div class="photo img-scale">
@@ -109,7 +109,7 @@
 						<h4 class="heading-title">Турникеты</h4>
 						<div class="heading-link">
 							<span>Перейти</span>
-							<svg class="icon icon-arrow-right"><use xlink:href="/images/symbol-defs.svg#arrow-right"></use></svg>
+							<svg class="icon icon-arrow-right"><use xlink:href="./images/symbol-defs.svg#arrow-right"></use></svg>
 						</div>
 					</div>
 					<div class="photo img-scale">
